-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b21
Remove JVM_GetModuleByPackageName() because it is not called except for by its own test, JVMGetModuleByPkgName.java.
Removing it involves removing all references to it by the JVM and JDK, removing its internal implementation function Modules::get_module_by_package_name(), and removing its test.
Removing it involves removing all references to it by the JVM and JDK, removing its internal implementation function Modules::get_module_by_package_name(), and removing its test.
- relates to
-
JDK-8171855 Move package name transformations during module bootstrap into native code
-
- Resolved
-