8172307: Remove ununsed JVM API JVM_GetModuleByPackageName()

Remove get_module_by_package_name() etc., and unneeded test.

Reviewed-by: sspitsyn, gtriantafill